public/content/@ks-qkcp/v3.4.1/03-installation-and-upgrade/02-install-kubesphere/01-install-kubephere-only.adoc
---
title: "仅安装{ks_product_left}"
linkTitle: "{ks_title}"
keywords: "Kubernetes, {ks_product}, 安装, 仅安装{ks_product_left}"
description: "介绍如何在现有的 Kubernetes 集群的基础上安装{ks_product_left}。"
weight: 01
layout: "second"
icon: ""
---

// :ks_include_id: f56609b08ae44bacb4648259fc59c70b
:ks_xref_id: d9dcce5c34994177b36180da0fc94989
:ks_comp: ../../../components/
:ks_title: 仅安装{ks_product_left}
:ks_keywords: Kubernetes, {ks_product}, 安装, 仅安装{ks_product_left}
:ks_description: 介绍如何在现有的 Kubernetes 集群的基础上安装{ks_product_left}。
:ks_weight: 01
:ks_icon:


本节介绍如何在现有的 Kubernetes 集群的基础上安装{ks_product_left} v3.4.1。

安装过程中将使用开源工具 KubeKey 创建私有镜像服务。有关 KubeKey 的更多信息，请访问 link:https://github.com/kubesphere/kubekey[GitHub KubeKey 仓库]。


// Note
include::../../../../_ks_components/admonitions/note.adoc[]

此安装方式不支持在安装过程中为集群配置高可用性和持久化存储。{ks_product_right}安装完成后将使用 Kubernetes 集群现有的高可用性和持久化存储配置。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]


== 前提条件link:[id=eaacbc36488d4574be0f481033b47b24]

ifeval::["{file_output_type}" == "pdf"]

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-prer-obtainInstallationPackage_new.adoc[]

endif::[]

* 您需要具有可用的 Kubernetes 集群，Kubernetes 版本必须为 v1.21.x、v1.22.x、v1.23.x, v1.24.x, v1.25.x 和 v1.26x （实验性支持）。
+
--
// Note
include::../../../../_ks_components/admonitions/note.adoc[]

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-note-123EdgeNodes.adoc[]

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--

* 在生产环境中，为确保系统具有足够的计算和存储资源，建议每个集群节点配置至少 8 个 CPU 核心、16 GB 内存和 200 GB 磁盘空间。

* Kubernetes 集群已设置默认存储类。有关更多信息，请参阅 link:https://kubernetes.io/zh/docs/tasks/administer-cluster/change-default-storage-class/[Kubernetes 官方文档]。
+

ifeval::["{file_output_type}" == "html"]
* 如果您的集群节点无法连接互联网，您还需要准备一台 Linux 服务器用于创建私有镜像服务，该服务器必须与{ks_product_both}集群节点网络连通并且在 **/mnt/registry** 目录挂载至少 100 GB 磁盘空间。除此之外，您需要提前创建离线安装包 **kubekey-artifact.tar.gz** 并将其传输到用于执行本节操作的集群节点。
endif::[]

ifeval::["{file_output_type}" == "pdf"]
* 除集群节点外，您还需要准备一台 Linux 服务器用于创建私有镜像服务，该服务器必须与{ks_product_both}集群节点网络连通，并且在 **/mnt/registry** 目录挂载至少 100 GB 磁盘空间。
endif::[]



== 创建私有镜像服务link:[id=78eeed6dc6ff4de08cf9bae1fd15bcb6]

ifeval::["{file_output_type}" == "html"]
如果您的集群节点无法连接互联网，请执行以下步骤使用 KubeKey 创建私有镜像服务。

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-downloadKubekey.adoc[]
endif::[]

ifeval::["{file_output_type}" == "pdf"]
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-decompressInstallationPackage_new.adoc[]
endif::[]


include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-initializeRegistry.adoc[]

+

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-editHosts.adoc[]




== 开始安装link:[id=6b403d60c5e34c88bc5e7677cf56806a]

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-editCcKsInstaller_new.adoc[]
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

vi cluster-configuration.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]


将 **local_registry** 参数设置为私有镜像服务的地址 **dockerhub.kubekey.local**，然后保存文件。

以下为示例文件。

// YAML
include::../../../../_ks_components/code/yaml.adoc[]

spec:
  persistence:
    storageClass: ""
  authentication:
    jwtSecret: ""
  local_registry: dockerhub.kubekey.local # 配置私有镜像仓库地址
  namespace_override: "" # 指定镜像namespace,当镜像全部上传到一个仓库的namespace中时使用
  etcd:
    monitoring: true      
    endpointIps: 192.168.0.2     # 配置 etcd 节点地址，多个 ip 使用逗号分隔（192.168.0.3,192.168.0.4,192.168.0.5）
    port: 2379             
    tlsEnable: true

include::../../../../_ks_components/code/codeEnd.adoc[]
--

. 执行以下命令开始安装{ks_product_left}：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl apply -f kubesphere-installer.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]

// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl apply -f cluster-configuration.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]
--
+

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-checkInstallationLog.adoc[]

+
--
如果显示如下信息，则表明安装成功：

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-desc-installationSuccessOutput.adoc[]
--
+

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-obtainLoginInfo.adoc[]
